# VoIQ

./: .env.example  .gitignore  README.md  app.py  config.py  requirements.txt
agents/: __init__.py  graph.py
agents/core/: __init__.py  prompts.py  state.py
agents/dictation/: __init__.py  agent.py
agents/evaluation/: __init__.py  agent.py
agents/mcq/: __init__.py  agent.py
agents/progress/: __init__.py  agent.py
agents/supervisor/: __init__.py  agent.py
voiq_core/: Cargo.toml  pyproject.toml
voiq_core/src/: db.rs  excel.rs  fuzzy.rs  lib.rs  progress.rs  questions.rs
